--- a/README
+++ b/README
@@ -1,13 +1,14 @@
-Vcards
-======
+has_vcards
+==========
 
-Introduction goes here.
+Rails plugin providing VCard like contact and address models and helpers.
 
 
-Example
+License
 =======
 
-Example goes here.
+Copyright (c) 2007-2010 Simon Hürlimann <simon.huerlimann@cyt.ch>
+Copyright (c) 2008 Agrabah <http://www.agrabah.ch>
+Copyright (c) 2007-2010 ZytoLabor <http://www.zyto-labor.com>
 
-
-Copyright (c) 2008 [name of plugin creator], released under the MIT license
+Released under the MIT license.
