Add views and controller for phone_numbers.

--- a/config/locales/has_vcards.de.yml
+++ b/config/locales/has_vcards.de.yml
@@ -4,6 +4,11 @@ de:
       to_s: %{street_address}, %{postal_code} #{locality}
 
   activerecord:
+    models:
+      vcard:              VCard
+      address:            Adresse
+      phone_number:       Kontakt
+
     attributes:
       vcard:
         full_name:        Name
