Translate Vcard model to "Kontakt" in german.

--- a/config/locales/has_vcards.de.yml
+++ b/config/locales/has_vcards.de.yml
@@ -5,7 +5,7 @@ de:
 
   activerecord:
     models:
-      vcard:              VCard
+      vcard:              Kontakt
       address:            Adresse
       phone_number:       Kontakt
 
