--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -66,3 +66,12 @@ de:
       region:           Region
       postal_code:      PLZ
       country_name:     Land
+
+  # DirectoryLookup
+  directory_lookup:
+    match_type:
+      perfect:     Genauer Treffer
+      great:       Ungenauer Name
+      family_name: Anderer Vorname
+      address:     An dieser Adresse
+      locality:    In diesem Ort
