--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -14,6 +14,7 @@ de:
     honorific_prefix: Anrede
     honorific_suffix: Namenszusatz
     address_type:     Art
+    address:          Adresse
 
   activerecord:
     models:
