--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,20 @@
-1.1.0 (unreleased)
+1.1.0
 =====
 Make Rails 4.2 ready.
+
+We're also dropping a couple of methods that have been broken for in the 1.0 release.
+As it wasn't working anyway, we do not bump a major version for these changes.
+
+FIXES:
+* Use lambda for scopes.
+* Port by_name Vard scope.
+
+REMOVED:
+* Drop .by_name scope declaration in has_vcards concern.
+* Drop finders in HasVcards::Vcard
+  .by_name_conditions(name)
+  .find_by_name(name)
+  .find_all_by_name(name)
 
 1.0.0
 =====
